--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 <body>
     <h1>
         Pagina de Vendas
+        <p>Vendas = R$ 5.000</p>
         <a href="index.html">Ir para Pagina Inicial</a>
 
     </h1>
